samples/_failures_safe/1761592778_b71a86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30576953.c: In function ‘main’:
./samples/SAFE/__tmp_30576953.c:150:25: error: missing terminating " character
  150 |         fprintf(stderr, "Decomp
      |                         ^~~~~~~
./samples/SAFE/__tmp_30576953.c:150:9: error: expected expression at end of input
  150 |         fprintf(stderr, "Decomp
      |         ^~~~~~~
./samples/SAFE/__tmp_30576953.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30576953.c:150:9: error: expected declaration or statement at end of input
